--- a/src/components-layout/layout-header.html
+++ b/src/components-layout/layout-header.html
@@ -138,6 +138,15 @@
             <!--  -----  Logo y Banner de jQuery UI -----  -->
             <div class="jquery-ui__logo-banner">
 
+                <!--  -----  logo de GitHub -----  -->
+                <a href="https://github.com/AntoniCut/jquery.antonydev.tech" target="_blank" rel="noopener noreferrer">
+                    <img 
+                        class="github-logo"
+                        src="/assets/img/github/github-icon.svg"
+                        alt="Logo GitHub"
+                    >
+                </a>
+
                 <!--  -----  Banner de jQuery UI -----  -->
                 <a href="https://jqueryui.com/" target="_blank" rel="noopener noreferrer">
                     <img 
