--- a/src/components-layout/desarrolloweb.com/layout-header.html
+++ b/src/components-layout/desarrolloweb.com/layout-header.html
@@ -116,6 +116,15 @@
         <!--  -----  Contenedor de los Logos de jQuery UI  -----  -->
         <div class="container-logos-banners__jquery-ui">
 
+            <!--  -----  logo de GitHub -----  -->
+            <a href="https://github.com/AntoniCut/jquery.antonydev.tech" target="_blank" rel="noopener noreferrer">
+                <img 
+                    class="github-logo"
+                    src="/assets/img/github/github-icon.svg"
+                    alt="Logo GitHub"
+                >
+            </a>
+
             <!--  -----  Logo y Banner de jQuery UI -----  -->
             <div class="jquery-ui__logo-banner">
 
