Separa eslitlos principales del html principal en archivos independientes y variables root del css

--- a/index.html
+++ b/index.html
@@ -15,9 +15,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Mus desarrollos con jQuery by AntonyDevTech Freelancer.">
+    <meta name="description" content="Mis desarrollos con jQuery by AntonyDevTech Freelancer.">
+        
+    <!--  ----------  Estilos  ----------  -->
+    <link rel="preload" href="/src/styles/normalize.css" as="style">
+    <link rel="stylesheet" href="/src/styles/normalize.css">
 
-    <link rel="stylesheet" href="/src/styles.css">
+    <link rel="preload" href="/src/styles/reset.css" as="style">
+    <link rel="stylesheet" href="/src/styles/reset.css">
+
+    <link rel="preload" href="/src/styles/layout/layout.css" as="style">
+    <link rel="stylesheet" href="/src/styles/layout/layout.css">
+
+    <link rel="preload" href="/src/styles/layout/layout-header.css" as="style">
+    <link rel="stylesheet" href="/src/styles/layout/layout-header.css">
+
+    <link rel="preload" href="/src/styles/layout/layout-navbar.css" as="style">
+    <link rel="stylesheet" href="/src/styles/layout/layout-navbar.css">
+
+    <link rel="preload" href="/src/styles/layout/layout-main.css" as="style">
+    <link rel="stylesheet" href="/src/styles/layout/layout-main.css">
+
+    <link rel="preload" href="/src/styles/layout/layout-footer.css" as="style">
+    <link rel="stylesheet" href="/src/styles/layout/layout-footer.css">
+
+    <!--  ----------  Scripts  ----------  -->
     <script type="module" src="/src/main.js"> </script>
 
 </head>
