Refactorizar layout-main

--- a/src/pages/04-escuela.it.html
+++ b/src/pages/04-escuela.it.html
@@ -17,6 +17,7 @@
         -----  Curso jQuery escuela.it  -----
         -------------------------------------
     -->
+
     <h2 class="main__title">
         Curso jQuery de escuela.it
     </h2>
@@ -27,11 +28,24 @@
 
         <article class="section__card">
 
-            <a href="/curso-jquery-escuela.it/">
+             <h3 class="card__title">
+                &lt; Curso de jQuery - escuela.it /&gt; 
+            </h3>
+
+            <a href="#">
                 <img 
                     class="card__img" 
                     src="/assets/img/escuela.it/jquery-escuela-it.avif"
                     alt="Curso jQuery de escuela.it"
+                >
+            </a>
+
+            <!--  -----  logo de GitHub -----  -->
+            <a href="https://github.com/AntoniCut/jquery.antonydev.tech" target="_blank" rel="noopener noreferrer">
+                <img 
+                    class="github-logo github-logo--main"
+                    src="/assets/img/github/github-icon.svg"
+                    alt="Logo GitHub"
                 >
             </a>
             
