--- a/src/pages/05-books-jquery.html
+++ b/src/pages/05-books-jquery.html
@@ -17,6 +17,7 @@
         -----  Libros de jQuery  -----
         ------------------------------
     -->
+    
     <h2 class="main__title">
         Libros de jQuery
     </h2>
@@ -27,11 +28,24 @@
 
         <article class="section__card">
 
+             <h3 class="card__title">
+                &lt; Aprende jQuery con 100 Ejercicios Prácticos - marcombo.com /&gt; 
+            </h3>
+
             <a href="#">
                 <img 
                     class="card__img" 
                     src="/assets/img/books/01-aprende-jquery-con-100-ejercicios-practicos.avif"
                     alt="Aprende jQuery con 100 ejercicios prácticos"
+                >
+            </a>
+
+            <!--  -----  logo de GitHub -----  -->
+            <a href="https://github.com/AntoniCut/jquery.antonydev.tech" target="_blank" rel="noopener noreferrer">
+                <img 
+                    class="github-logo github-logo--main"
+                    src="/assets/img/github/github-icon.svg"
+                    alt="Logo GitHub"
                 >
             </a>
             
