--- a/src/components-layout/desarrolloweb.com/layout-header.html
+++ b/src/components-layout/desarrolloweb.com/layout-header.html
@@ -48,6 +48,7 @@
                        class="jquery-banner"
                         src="/assets/img/jquery/jquery-banner.webp"
                         alt="Banner jQuery"
+                        loading="lazy"
                     >
                 </a>
 
@@ -57,6 +58,7 @@
                         class="jquery-logo"
                         src="/assets/img/jquery/jquery-logo.webp"
                         alt="Logo jQuery"
+                        loading="lazy"
                     >
                 </a>
 
@@ -73,6 +75,7 @@
                 class="cursos__logos cursos__logos--desarrollowebcom"
                 src="/assets/img/desarrolloweb.com/desarrollowebcom.avif"
                 alt="Logo Desarrolloweb.com"
+                loading="lazy"
             >
 
         </div>
@@ -122,6 +125,7 @@
                     class="github-logo"
                     src="/assets/img/github/github-icon.svg"
                     alt="Logo GitHub"
+                    loading="lazy"
                 >
             </a>
 
@@ -134,6 +138,7 @@
                         class="jquery-ui-banner"
                         src="/assets/img/jquery-ui/jquery-ui-banner.avif"
                         alt="Banner jQuery UI"
+                        loading="lazy"
                     >
                 </a>
 
@@ -143,6 +148,7 @@
                         class="jquery-ui-logo"
                         src="/assets/img/jquery-ui/jquery-ui-logo.svg"
                         alt="Logo jQuery UI"
+                        loading="lazy"
                     >
                 </a>
 
@@ -159,6 +165,7 @@
                 class="cursos__logos cursos__logos--desarrollowebcom"
                 src="/assets/img/desarrolloweb.com/desarrollowebcom.avif"
                 alt="Logo Desarrolloweb.com"
+                loading="lazy"
             >
             
         </div>
