--- a/src/components-layout/layout-footer.html
+++ b/src/components-layout/layout-footer.html
@@ -31,6 +31,7 @@
                     class="footer__jquery-banner"
                     src="/assets/img/jquery/jquery-banner.webp"
                     alt="Banner jQuery"
+                    loading="lazy"
                 >
             </a>
 
@@ -40,6 +41,7 @@
                     class="footer__jquery-logo"
                     src="/assets/img/jquery/jquery-logo.webp"
                     alt="Logo jQuery"
+                    loading="lazy"
                 >
             </a>
 
@@ -73,6 +75,7 @@
                     class="footer__jquery-ui-banner"
                     src="/assets/img/jquery-ui/jquery-ui-banner.avif"
                     alt="Banner jQuery UI"
+                    loading="lazy"
                 >
             </a>
 
@@ -82,6 +85,7 @@
                     class="footer__jquery-ui-logo"
                     src="/assets/img/jquery-ui/jquery-ui-logo.svg"
                     alt="Logo jQuery UI"
+                    loading="lazy"
                 >
             </a>
 
