--- a/src/components-layout/layout-header.html
+++ b/src/components-layout/layout-header.html
@@ -46,6 +46,7 @@
                        class="jquery-banner"
                         src="/assets/img/jquery/jquery-banner.webp"
                         alt="Banner jQuery"
+                        loading="lazy"
                     >
                 </a>
 
@@ -55,6 +56,7 @@
                         class="jquery-logo"
                         src="/assets/img/jquery/jquery-logo.webp"
                         alt="Logo jQuery"
+                        loading="lazy"
                     >
                 </a>
 
@@ -72,6 +74,7 @@
                     class="cursos__logos cursos__logos--udemy"
                     src="/assets/img/udemy/udemy.avif"
                     alt="Logo Udemy"
+                    loading="lazy"
                 >
             </a>
 
@@ -82,6 +85,7 @@
                     class="cursos__logos cursos__logos--youtube"
                     src="/assets/img/youtube/youtube.avif"
                     alt="Logo YouTube"
+                    loading="lazy"
                 >
             </a>
 
@@ -91,6 +95,7 @@
                     class="cursos__logos cursos__logos--desarrollowebcom"
                     src="/assets/img/desarrolloweb.com/desarrollowebcom.avif"
                     alt="Logo Desarrolloweb.com"
+                    loading="lazy"
                 >
             </a>
 
@@ -144,6 +149,7 @@
                         class="github-logo"
                         src="/assets/img/github/github-icon.svg"
                         alt="Logo GitHub"
+                        loading="lazy"
                     >
                 </a>
 
@@ -153,6 +159,7 @@
                         class="jquery-ui-banner"
                         src="/assets/img/jquery-ui/jquery-ui-banner.avif"
                         alt="Banner jQuery UI"
+                        loading="lazy"
                     >
                 </a>
 
@@ -162,6 +169,7 @@
                         class="jquery-ui-logo"
                         src="/assets/img/jquery-ui/jquery-ui-logo.svg"
                         alt="Logo jQuery UI"
+                        loading="lazy"
                     >
                 </a>
 
@@ -179,6 +187,7 @@
                     class="cursos__logos cursos__logos--escuela-it"
                     src="/assets/img/escuela.it/escuelait.avif"
                     alt="Logo Escuela.it"
+                    loading="lazy"
                 >
             </a>
 
@@ -188,6 +197,7 @@
                     class="cursos__logos cursos__logos--jquery-books"
                     src="/assets/img/books/jquery-books.avif"
                     alt="Logo jQuery Books"
+                    loading="lazy"
                 >
             </a>
 
@@ -197,6 +207,7 @@
                     class="cursos__logos cursos__logos--jquery-manuales"
                     src="/assets/img/manuales/jquery-manuales.avif"
                     alt="Logo jQuery Manuales"
+                    loading="lazy"
                 >
 
         </div>
