--- a/src/components-layout/youtube/layout-navbar.html
+++ b/src/components-layout/youtube/layout-navbar.html
@@ -19,6 +19,7 @@
                 class="jquery-logo"
                 src="/assets/img/jquery/jquery-logo.webp"
                 alt="Logo jQuery"
+                loading="lazy"
            >
         </a>
 
@@ -30,6 +31,7 @@
                 class="jquery-ui-logo"
                 src="/assets/img/jquery-ui/jquery-ui-logo.svg"
                 alt="Logo jQuery UI"
+                loading="lazy"
             >
         </a>
 
