--- a/src/pages/03-desarrolloweb.com.html
+++ b/src/pages/03-desarrolloweb.com.html
@@ -38,6 +38,7 @@
                     class="card__img" 
                     src="/assets/img/desarrolloweb.com/01-jquery-manuales.avif"
                     alt="jQuery Manuales - desarrolloweb.com"
+                    loading="lazy"
                 >
             </a>
 
@@ -47,6 +48,7 @@
                     class="github-logo github-logo--main"
                     src="/assets/img/github/github-icon.svg"
                     alt="Logo GitHub"
+                    loading="lazy"
                 >
             </a>
             
@@ -65,6 +67,7 @@
                     class="card__img" 
                     src="/assets/img/desarrolloweb.com/02-jquery-videotutoriales.avif"
                     alt="jQuery Videotutoriales - desarrolloweb.com"
+                    loading="lazy"
                 >
             </a>
 
@@ -74,6 +77,7 @@
                     class="github-logo github-logo--main"
                     src="/assets/img/github/github-icon.svg"
                     alt="Logo GitHub"
+                    loading="lazy"
                 >
             </a>
 
@@ -91,6 +95,7 @@
                     class="card__img" 
                     src="/assets/img/desarrolloweb.com/03-taller-de-jquery.avif"
                     alt="Taller de jQuery - desarrolloweb.com"
+                    loading="lazy"
                 >
             </a>
 
@@ -100,6 +105,7 @@
                     class="github-logo github-logo--main"
                     src="/assets/img/github/github-icon.svg"
                     alt="Logo GitHub"
+                    loading="lazy"
                 >
             </a>
 
@@ -117,6 +123,7 @@
                     class="card__img" 
                     src="/assets/img/desarrolloweb.com/04-manual-de-jquery-ui.avif"
                     alt="Manual de jQuery UI - desarrolloweb.com"
+                    loading="lazy"
                 >
             </a>
 
@@ -126,6 +133,7 @@
                     class="github-logo github-logo--main"
                     src="/assets/img/github/github-icon.svg"
                     alt="Logo GitHub"
+                    loading="lazy"
                 >
             </a>
 
@@ -143,6 +151,7 @@
                     class="card__img" 
                     src="/assets/img/desarrolloweb.com/05-manual-de-jquery-mobile.avif"
                     alt="Manual de jQuery Mobile - desarrolloweb.com"
+                    loading="lazy"
                 >
             </a>
 
@@ -152,6 +161,7 @@
                     class="github-logo github-logo--main"
                     src="/assets/img/github/github-icon.svg"
                     alt="Logo GitHub"
+                    loading="lazy"
                 >
             </a>
 
@@ -169,6 +179,7 @@
                     class="card__img" 
                     src="/assets/img/desarrolloweb.com/06-jquery-io.avif"
                     alt="jQuery IO - desarrolloweb.com"
+                    loading="lazy"
                 >
             </a>
 
@@ -178,6 +189,7 @@
                     class="github-logo github-logo--main"
                     src="/assets/img/github/github-icon.svg"
                     alt="Logo GitHub"
+                    loading="lazy"
                 >
             </a>
 
