--- a/src/pages/04-escuela.it.html
+++ b/src/pages/04-escuela.it.html
@@ -37,6 +37,7 @@
                     class="card__img" 
                     src="/assets/img/escuela.it/jquery-escuela-it.avif"
                     alt="Curso jQuery de escuela.it"
+                    loading="lazy"
                 >
             </a>
 
@@ -46,6 +47,7 @@
                     class="github-logo github-logo--main"
                     src="/assets/img/github/github-icon.svg"
                     alt="Logo GitHub"
+                    loading="lazy"
                 >
             </a>
             
