--- a/src/pages/05-books-jquery.html
+++ b/src/pages/05-books-jquery.html
@@ -37,6 +37,7 @@
                     class="card__img" 
                     src="/assets/img/books/01-aprende-jquery-con-100-ejercicios-practicos.avif"
                     alt="Aprende jQuery con 100 ejercicios prácticos"
+                    loading="lazy"
                 >
             </a>
 
@@ -46,6 +47,7 @@
                     class="github-logo github-logo--main"
                     src="/assets/img/github/github-icon.svg"
                     alt="Logo GitHub"
+                    loading="lazy"
                 >
             </a>
             
