--- a/src/pages/06-manuales-jquery.html
+++ b/src/pages/06-manuales-jquery.html
@@ -37,6 +37,7 @@
                     class="card__img" 
                     src="/assets/img/manuales/jquery-manuales.avif"
                     alt="Manuales de jQuery"
+                    loading="lazy"
                 >
             </a>
 
@@ -46,6 +47,7 @@
                     class="github-logo github-logo--main"
                     src="/assets/img/github/github-icon.svg"
                     alt="Logo GitHub"
+                    loading="lazy"
                 >
             </a>
             
