--- a/src/components-layout/desarrolloweb.com/layout-footer.html
+++ b/src/components-layout/desarrolloweb.com/layout-footer.html
@@ -30,6 +30,7 @@
                     class="footer__jquery-banner"
                     src="/assets/img/jquery/jquery-banner.webp"
                     alt="Banner jQuery"
+                    loading="lazy"
                 >
             </a>
 
@@ -39,6 +40,7 @@
                     class="footer__jquery-logo"
                     src="/assets/img/jquery/jquery-logo.webp"
                     alt="Logo jQuery"
+                    loading="lazy"
                 >
             </a>
 
@@ -71,6 +73,7 @@
                     class="footer__jquery-ui-banner"
                     src="/assets/img/jquery-ui/jquery-ui-banner.avif"
                     alt="Banner jQuery UI"
+                    loading="lazy"
                 >
             </a>
 
@@ -80,6 +83,7 @@
                     class="footer__jquery-ui-logo"
                     src="/assets/img/jquery-ui/jquery-ui-logo.svg"
                     alt="Logo jQuery UI"
+                    loading="lazy"
                 >
             </a>
 
