--- a/src/components-layout/desarrolloweb.com/layout-navbar.html
+++ b/src/components-layout/desarrolloweb.com/layout-navbar.html
@@ -21,6 +21,7 @@
                 class="jquery-logo"
                 src="/assets/img/jquery/jquery-logo.webp"
                 alt="Logo jQuery"
+                loading="lazy"
            >
         </a>
 
@@ -32,6 +33,7 @@
                 class="jquery-ui-logo"
                 src="/assets/img/jquery-ui/jquery-ui-logo.svg"
                 alt="Logo jQuery UI"
+                loading="lazy"
             >
         </a>
 
