--- a/src/components-layout/youtube/layout-header.html
+++ b/src/components-layout/youtube/layout-header.html
@@ -48,6 +48,7 @@
                        class="jquery-banner"
                         src="/assets/img/jquery/jquery-banner.webp"
                         alt="Banner jQuery"
+                        loading="lazy"
                     >
                 </a>
 
@@ -57,6 +58,7 @@
                         class="jquery-logo"
                         src="/assets/img/jquery/jquery-logo.webp"
                         alt="Logo jQuery"
+                        loading="lazy"
                     >
                 </a>
 
@@ -73,6 +75,7 @@
                 class="cursos__logos cursos__logos--youtube"
                 src="/assets/img/youtube/youtube.avif"
                 alt="Logo YouTube"
+                loading="lazy"
             >
 
         </div>
@@ -125,6 +128,7 @@
                         class="github-logo"
                         src="/assets/img/github/github-icon.svg"
                         alt="Logo GitHub"
+                        loading="lazy"
                     >
                 </a>
 
@@ -135,6 +139,7 @@
                         class="jquery-ui-banner"
                         src="/assets/img/jquery-ui/jquery-ui-banner.avif"
                         alt="Banner jQuery UI"
+                        loading="lazy"
                     >
                 </a>
 
@@ -144,6 +149,7 @@
                         class="jquery-ui-logo"
                         src="/assets/img/jquery-ui/jquery-ui-logo.svg"
                         alt="Logo jQuery UI"
+                        loading="lazy"
                     >
                 </a>
 
@@ -160,6 +166,7 @@
                 class="cursos__logos cursos__logos--youtube"
                 src="/assets/img/youtube/youtube.avif"
                 alt="Logo YouTube"
+                loading="lazy"
             >
             
         </div>
