--- a/src/pages/01-udemy.html
+++ b/src/pages/01-udemy.html
@@ -37,6 +37,7 @@
                     class="card__img" 
                     src="/assets/img/udemy/01-aprendiendo-jquery-master-javascript-clasico.avif"
                     alt="Aprendiendo jQuery del Master JavaScript Clasico"
+                    loading="lazy"
                 >
             </a>
 
@@ -46,6 +47,7 @@
                     class="github-logo github-logo--main"
                     src="/assets/img/github/github-icon.svg"
                     alt="Logo GitHub"
+                    loading="lazy"
                 >
             </a>
 
@@ -63,6 +65,7 @@
                     class="card__img" 
                     src="/assets/img/udemy/02-jquery-de-cero-a-avanzado.avif"
                     alt="jQuery de Cero a Avanzado - Legacy"
+                    loading="lazy"
                 >
             </a>
 
@@ -72,6 +75,7 @@
                     class="github-logo github-logo--main"
                     src="/assets/img/github/github-icon.svg"
                     alt="Logo GitHub"
+                    loading="lazy"
                 >
             </a>
 
@@ -89,6 +93,7 @@
                     class="card__img" 
                     src="/assets/img/udemy/03-jquery-100-trucos-profesionales.avif"
                     alt="jQuery 100 Trucos Profesionales"
+                    loading="lazy"
                 >
             </a>
 
@@ -98,6 +103,7 @@
                     class="github-logo github-logo--main"
                     src="/assets/img/github/github-icon.svg"
                     alt="Logo GitHub"
+                    loading="lazy"
                 >
             </a>
 
@@ -115,6 +121,7 @@
                     class="card__img" 
                     src="/assets/img/udemy/04-todo-jquery-de-novato-a-experto.avif"
                     alt="Todo jQuery de Novato a Experto"
+                    loading="lazy"
                 >
             </a>
 
@@ -124,6 +131,7 @@
                     class="github-logo github-logo--main"
                     src="/assets/img/github/github-icon.svg"
                     alt="Logo GitHub"
+                    loading="lazy"
                 >
             </a>
 
@@ -141,6 +149,7 @@
                     class="card__img" 
                     src="/assets/img/udemy/05-jquery-y-ajax-desde-cero-la-guia-definitiva-2014.avif"
                     alt="jQuery y Ajax desde Cero - La Guía Definitiva 2014"
+                    loading="lazy"
                 >
             </a>
 
@@ -150,6 +159,7 @@
                     class="github-logo github-logo--main"
                     src="/assets/img/github/github-icon.svg"
                     alt="Logo GitHub"
+                    loading="lazy"
                 >
             </a>
 
@@ -167,6 +177,7 @@
                     class="card__img" 
                     src="/assets/img/udemy/06-aprende-jquery-y-jquery-ui-de-forma-facil-y-practica.avif"
                     alt="Aprende jQuery y jQuery UI de forma fácil y práctica"
+                    loading="lazy"
                 >
             </a>
 
@@ -176,6 +187,7 @@
                     class="github-logo github-logo--main"
                     src="/assets/img/github/github-icon.svg"
                     alt="Logo GitHub"
+                    loading="lazy"
                 >
             </a>
 
@@ -193,6 +205,7 @@
                     class="card__img" 
                     src="/assets/img/udemy/07-jquery-in-action-build-20-jquery-project.avif"
                     alt="jQuery in Action - Build 20 jQuery Projects"
+                    loading="lazy"
                 >
             </a>
 
@@ -202,6 +215,7 @@
                     class="github-logo github-logo--main"
                     src="/assets/img/github/github-icon.svg"
                     alt="Logo GitHub"
+                    loading="lazy"
                 >
             </a>
 
@@ -219,6 +233,7 @@
                     class="card__img" 
                     src="/assets/img/udemy/08-jquery-ui-in-action-build-13-jquery-ui-project.avif"
                     alt="jQuery UI in Action - Build 13 jQuery UI Projects"
+                    loading="lazy"
                 >
             </a>
 
@@ -228,6 +243,7 @@
                     class="github-logo github-logo--main"
                     src="/assets/img/github/github-icon.svg"
                     alt="Logo GitHub"
+                    loading="lazy"
                 >
             </a>
 
@@ -244,6 +260,7 @@
                     class="card__img" 
                     src="/assets/img/udemy/09-jquery-create-overlay-popups.avif"
                     alt="jQuery Create Overlay Popups"
+                    loading="lazy"
                 >
             </a>
 
@@ -253,6 +270,7 @@
                     class="github-logo github-logo--main"
                     src="/assets/img/github/github-icon.svg"
                     alt="Logo GitHub"
+                    loading="lazy"
                 >
             </a>
 
@@ -270,6 +288,7 @@
                     class="card__img" 
                     src="/assets/img/udemy/10-aprende-jquery-para-implementar-tus-aplicaciones-web.avif"
                     alt="Aprende jQuery para Implementar tus Aplicaciones Web"
+                    loading="lazy"
                 >
             </a>
 
@@ -279,6 +298,7 @@
                     class="github-logo github-logo--main"
                     src="/assets/img/github/github-icon.svg"
                     alt="Logo GitHub"
+                    loading="lazy"
                 >
             </a>
 
@@ -296,6 +316,7 @@
                     class="card__img" 
                     src="/assets/img/udemy/11-complete-jquery-programming-curriculum-2014.avif"
                     alt="Complete jQuery Programming Curriculum 2014"
+                    loading="lazy"
                 >
             </a>
 
@@ -305,6 +326,7 @@
                     class="github-logo github-logo--main"
                     src="/assets/img/github/github-icon.svg"
                     alt="Logo GitHub"
+                    loading="lazy"
                 >
             </a>
 
@@ -312,7 +334,6 @@
 
 
     </section>
-
 
 
 </main>
