Add - enlace para acceder al curso de jQuery de escuela.it

--- a/src/components-layout/escuela.it/layout-navbar.html
+++ b/src/components-layout/escuela.it/layout-navbar.html
@@ -52,7 +52,7 @@
 
         <!--  -----  item 1  -----  -->
         <li class="navbar__item">
-            <a href="#" data-id="home"> 
+            <a href="/curso-jquery-escuela.it/"> 
                 Curso jQuery de escuela.it
             </a>
         </li>
