--- a/src/pages/04-escuela.it.html
+++ b/src/pages/04-escuela.it.html
@@ -32,7 +32,7 @@
                 &lt; Curso de jQuery - escuela.it /&gt; 
             </h3>
 
-            <a href="#">
+            <a href="/curso-jquery-escuela.it/">
                 <img 
                     class="card__img" 
                     src="/assets/img/escuela.it/jquery-escuela-it.avif"
