Add - Efecto de carga Loading

--- a/index.html
+++ b/index.html
@@ -47,6 +47,29 @@
 
 <body>
     
+    <!--  ----------  LOADER  ----------  -->
+    <div class="loader__container" id="loader">
+
+        <h1 class="header__title"> 
+            &lt; Mis jQuery Desarrollos /&gt; 
+        </h1>
+
+        <div class="spinner"> </div>
+
+        <img
+            class="loader__logo-jquery"
+            src="/assets/img/jquery/jquery-logo.svg"
+            alt="jQuery Animation Loader"
+            loading="lazy"
+        >
+
+        <h1 class="header__title"> 
+            &lt; By AntonyDev /&gt;
+        </h1>
+
+    </div>
+
+
     <!--  ----------  LAYOUT  ----------  -->
     <div class="layout" id="layout">
     
