Solventar error Efecto de carga Loading

--- a/index.html
+++ b/index.html
@@ -85,6 +85,8 @@
         <!--  ----------  FOOTER  ----------  -->
         <div class="main__footer" id="layoutFooter"> </div>
 
+    </div>
+
 </body>
 
 </html>
