--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Mis desarrollos con jQuery by AntonyDevTech Freelancer.">
+
+    <link rel="manifest" href="/manifest.json">
+    <meta name="theme-color" content="#6366f1">
         
     <!--  ----------  Estilos  ----------  -->
     <link rel="preload" href="/src/styles/normalize.css" as="style">
