Refactorizar Icons y Logos de jQuery y jQuery UI de las layout-header

--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
         <div class="spinner"> </div>
 
         <img
-            class="loader__logo-jquery"
-            src="/assets/img/jquery/jquery-logo.svg"
+            class="loader__icon-jquery"
+            src="/assets/img/jquery/jquery-icon.svg"
             alt="jQuery Animation Loader"
             loading="lazy"
         >
