Refactorizar Icons y Logos de jQuery y jQuery UI de las layout-footer

--- a/src/components-layout/layout-footer.html
+++ b/src/components-layout/layout-footer.html
@@ -9,7 +9,11 @@
 -->
 
 
-<!--  ----------  FOOTER  ----------  -->
+<!--  
+    ------------------------------
+    ----------  FOOTER  ----------
+    ------------------------------  
+-->
 <footer class="layout__footer">
 
 
@@ -22,24 +26,24 @@
     <header class="footer__header">
 
 
-        <!--  -----  Contenedor del logo y banner de jQuery  -----  -->
+        <!--  -----  Contenedor del logo y del icon de jQuery  -----  -->
         <div class="footer__container-logos">
 
-            <!--  -----  banner jQuery  -----  -->
+            <!--  -----  Logo jQuery  -----  -->
             <a href="https://jquery.com/" target="_blank" rel="noopener noreferrer">
                 <img 
-                    class="footer__jquery-banner"
-                    src="/assets/img/jquery/jquery-banner.webp"
+                    class="footer__jquery-logo"
+                    src="/assets/img/jquery/jquery-logo.svg"
                     alt="Banner jQuery"
                     loading="lazy"
                 >
             </a>
 
-            <!--  -----  logo jQuery  -----  -->
+            <!--  -----  Icon jQuery  -----  -->
             <a href="https://jquery.com/" target="_blank" rel="noopener noreferrer">
                 <img 
-                    class="footer__jquery-logo"
-                    src="/assets/img/jquery/jquery-logo.webp"
+                    class="footer__jquery-icon"
+                    src="/assets/img/jquery/jquery-icon.svg"
                     alt="Logo jQuery"
                     loading="lazy"
                 >
@@ -66,24 +70,24 @@
         </div>
 
 
-        <!--  -----  Contenedor del logo y banner de jQuery UI  -----  -->
+        <!--  -----  Contenedor del logo y del Icono de jQuery UI  -----  -->
         <div class="footer__container-logos">
 
-            <!--  -----  banner jQuery UI  -----  -->
+            <!--  -----  Logo jQuery UI  -----  -->
             <a href="https://jqueryui.com/" target="_blank" rel="noopener noreferrer">
                 <img 
-                    class="footer__jquery-ui-banner"
-                    src="/assets/img/jquery-ui/jquery-ui-banner.avif"
+                    class="footer__jquery-ui-logo"
+                    src="/assets/img/jquery-ui/jquery-ui-logo.avif"
                     alt="Banner jQuery UI"
                     loading="lazy"
                 >
             </a>
 
-            <!--  -----  logo jQuery UI  -----  -->
+            <!--  -----  Icon jQuery UI  -----  -->
             <a href="https://jqueryui.com/" target="_blank" rel="noopener noreferrer">
                 <img 
-                    class="footer__jquery-ui-logo"
-                    src="/assets/img/jquery-ui/jquery-ui-logo.svg"
+                    class="footer__jquery-ui-icon"
+                    src="/assets/img/jquery-ui/jquery-ui-icon.svg"
                     alt="Logo jQuery UI"
                     loading="lazy"
                 >
