Refactorizar Icons y Logos de jQuery y jQuery UI de las layout-navbar

--- a/src/components-layout/books/layout-navbar.html
+++ b/src/components-layout/books/layout-navbar.html
@@ -9,29 +9,34 @@
 -->
 
 
-<!--  ----------  NAVBAR  ----------  -->
+<!--
+    ------------------------------
+    ----------  NAVBAR  ----------  
+    ------------------------------
+-->
+
 <nav class="layout__navbar">
 
     <!--  -----  Título del menú (navbar)  -----  -->
     <div class="navbar__title"> 
         
-        <!--  -----  Logo de jQuery -----  -->
+        <!--  -----  Icon de jQuery -----  -->
         <a href="https://jquery.com/" target="_blank" rel="noopener noreferrer">
             <img 
-                class="jquery-logo"
-                src="/assets/img/jquery/jquery-logo.webp"
+                class="jquery-icon"
+                src="/assets/img/jquery/jquery-icon.svg"
                 alt="Logo jQuery"
                 loading="lazy"
            >
         </a>
 
-        <h3> Libros de jQuery </h3>
+        <h3> Books de jQuery </h3>
 
-        <!--  -----  Logo de jQuery UI -----  -->
+        <!--  -----  Icon de jQuery UI -----  -->
         <a href="https://jqueryui.com/" target="_blank" rel="noopener noreferrer">
             <img 
-                class="jquery-ui-logo"
-                src="/assets/img/jquery-ui/jquery-ui-logo.svg"
+                class="jquery-ui-icon"
+                src="/assets/img/jquery-ui/jquery-ui-icon.svg"
                 alt="Logo jQuery UI"
                 loading="lazy"
             >
