--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
     <link rel="preload" href="/src/styles/reset.css" as="style">
     <link rel="stylesheet" href="/src/styles/reset.css">
 
+    <link rel="preload" href="/src/styles/view-transition.css" as="style">
+    <link rel="stylesheet" href="/src/styles/view-transition.css">
+    
     <link rel="preload" href="/src/styles/layout/layout.css" as="style">
     <link rel="stylesheet" href="/src/styles/layout/layout.css">
 
