--- a/src/components-layout/layout-header.html
+++ b/src/components-layout/layout-header.html
@@ -80,6 +80,7 @@
                     src="/assets/img/udemy/udemy.avif"
                     alt="Logo Udemy"
                     loading="lazy"
+                    view-transition-name="cursos-logos--udemy"
                 >
             </a>
 
