--- a/src/pages/01-udemy.html
+++ b/src/pages/01-udemy.html
@@ -11,6 +11,17 @@
 <!--  ----------  MAIN  ----------  -->
 <main class="layout__main">
 
+
+    <!--  -----  Logo de Udemy -----  -->
+    <a href="#" data-id="udemy"> 
+        <img
+            class="cursos__logos cursos__logos--udemy"
+            src="/assets/img/udemy/udemy.avif"
+            alt="Logo Udemy"
+            loading="lazy"
+            view-transition-name="cursos-logos--udemy"
+        >
+    </a>
      
    <!--  
         -----------------------------
