Refactorizar layouts, navbar y main

--- a/src/pages/00-home.html
+++ b/src/pages/00-home.html
@@ -17,14 +17,13 @@
         -----  Descripción de la Página  ----------
         -------------------------------------------  
     -->
-    <h2 class="main__title main__title--first">
+    <h2 class="main__title">
         Bienvenido a mis desarollos con jQuery
     </h2>
 
     <section class="main__section">
 
     </section>
-
 
 
     <!--  
