modificacion archivo 00-home.html

--- a/src/pages/00-home.html
+++ b/src/pages/00-home.html
@@ -46,7 +46,7 @@
                 &lt; Aprendiendo jQuery del Master JavaScript <br> Clasico /&gt; 
             </h3>
             
-            <a href="#">
+            <a href="/01-udemy/01-jquery-master-javascript-clasico/">
                 <img 
                     class="card__img" 
                     src="/assets/img/udemy/01-aprendiendo-jquery-master-javascript-clasico.avif"
