--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Mis desarrollos con jQuery by AntonyDevTech Freelancer.">
 
+    <!--  ----------  Manifest  ----------  -->
     <link rel="manifest" href="/manifest.json?v=3">
     <meta name="theme-color" content="#6366f1">
         
@@ -44,7 +45,7 @@
 
     <link rel="preload" href="/src/styles/layout/layout-footer.css" as="style">
     <link rel="stylesheet" href="/src/styles/layout/layout-footer.css">
-
+    
     <!--  ----------  Scripts  ----------  -->
     <script type="module" src="/src/main.js"> </script>
 
