--- a/src/pages/01-udemy.html
+++ b/src/pages/01-udemy.html
@@ -32,7 +32,7 @@
                 &lt; Aprendiendo jQuery del Master JavaScript <br> Clasico /&gt; 
             </h3>
             
-            <a href="#">
+            <a href="/01-udemy/01-jquery-master-javascript-clasico/">
                 <img 
                     class="card__img" 
                     src="/assets/img/udemy/01-aprendiendo-jquery-master-javascript-clasico.avif"
